# Toy-Projects

./: README.md
1. Stitching/: README.md
1. Stitching/Multi-images/: CMakeLists.txt  README.md
1. Stitching/Multi-images/example/: api.cpp  main.cpp
1. Stitching/Multi-images/module/: CMakeLists.txt
1. Stitching/Multi-images/module/include/: extractor.h
1. Stitching/Multi-images/module/src/: extractor.cpp
1. Stitching/Two-imgaes/: main.cpp
2. trajkovic_corner/: CMakeLists.txt  README.md
2. trajkovic_corner/example/: main.cpp
2. trajkovic_corner/module/: CMakeLists.txt
2. trajkovic_corner/module/include/: detection.h
2. trajkovic_corner/module/src/: detection.cpp
3. Homography/: CMakeLists.txt  README.md
3. Homography/example/: main.cpp
3. Homography/module/: CMakeLists.txt
3. Homography/module/include/: module.h
3. Homography/module/src/: module.cpp
